# bluez-alsa

./: configure.ac
includes/bluealsa/: bluealsa.h  ctl-client.h
src/: Makefile.am  at.c  bluealsa.c  bluealsa.h  bluez-a2dp.c  bluez-a2dp.h  bluez-alsa.conf  bluez.c  bluez.h  ctl.c  ctl.h  io.c  main.c  ofono.c  rfcomm.c  transport.c  utils.c  utils.h
src/asound/: Makefile.am  bluealsa-ctl.c  bluealsa-pcm.c
src/bluealsalib/: Makefile.am  bluealsa.pc.in
src/shared/: ctl-client.c  ffb.c  log.c  rt.c
test/: Makefile.am  server-mock.c  test-at.c  test-bluealsalib.c  test-io.c  test-utils.c
utils/: Makefile.am  aplay.c  rfcomm.c
